# tagclean

./: .gitignore  README.md  cleaned_bn_nid_corpus.csv  pyproject.toml
configs/: bn_full.yaml  example.yaml
data/: tag_answer.json
docs/: harness_design.md  repair_design.md  repair_thresholds.md  run_instructions.md  system_diagram.txt  threshold_runs_comparison.md
examples/order_cancel/: config.yaml  question_tag.csv  tag_answer.json
examples/smoke/: config.yaml  question_tag.csv  tag_answer.json
runs/: bn_combined_production.csv  families.yaml  families_e2e.yaml  families_report.md  families_test.yaml
runs/bn_account_locked/: run_manifest.json
runs/bn_account_locked/stage0/: manifest.json
runs/bn_account_locked/stage1/: manifest.json
runs/bn_account_locked/stage2/: manifest.json  tag_description.jsonl  tag_index.json
runs/bn_account_locked/stage3/: manifest.json  tag_boundary_policy.jsonl  tag_merge_map.csv
runs/bn_account_locked/stage4/: manifest.json  (+1 more)
runs/bn_combined_production/: run_manifest.json
runs/bn_name_correction/: run_manifest.json
runs/bn_otp/: run_manifest.json  stage0  stage1
runs/bn_production/: composed_top40.csv  run_manifest.json
runs/bn_production_max/: composed_cleaned.csv  run_manifest.json
runs/fam_ee2150d3/: stage2
scripts/: README.md  repair_aggressive_single_pass.py  repair_v1.py  repair_v2.py  repair_v3.py
src/tagclean/: claude_cli.py  cleaner.py  repair.py  repair_state.py
tests/: test_cleaner.py  test_repair.py  test_smoke.py
tools/: precommit_artifact_check.sh
tools/githooks/: pre-commit
(+114 files in other folders)
