[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagclean"
version = "0.1.0"
description = "LLM-assisted FAQ dataset cleaner: drop ambiguous rows, audit close-tag boundaries, pick the best examples per tag."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ehz" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
faiss = ["faiss-cpu>=1.7"]
openai = ["openai>=1.40", "openai-agents>=0.1"]
bn = ["bnunicodenormalizer>=0.1"]
dev = ["pytest>=8.0"]
all = [
    "tagclean[embeddings]",
    "tagclean[faiss]",
    "tagclean[openai]",
    "tagclean[bn]",
    "tagclean[dev]",
]

[project.scripts]
tagclean = "tagclean.cleaner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
